# ggdownload

./: Justfile  README.md  README.rst  example.env  pyproject.toml  scrapy.cfg
grapplersguide/: __main__.py  items.py  middlewares.py  pipelines.py  settings.py  spiders.py
grapplersguide/spiders/: __init__.py
tests/: test_grapplersguide.py
