[tool.poetry]
name = "grapplersguide"
version = "0.1.0"
description = "Video downloader for Guide Sites like GrapplersGuide.com"
authors = ["dfrank <derek@frank.sh>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
