[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "grapplersguide"
version = "0.1.0"
description = "Video downloader for Guide Sites like GrapplersGuide.com"
authors = ["dfrank <derek@frank.sh>"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.5.1"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.1"
black = "^21.12b0"
flake8 = "^4.0.1"
ipython = "^7.30.1"
mypy = "^0.910"
pdbpp = "^0.10.3"
pre-commit = "^2.16.0"
pylint = "^2.12.2"
pytest = "^5.2"

[tool.poetry.scripts]
gg = "grapplersguide.__main__:app"
